# datadog-triage-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.ps1
docs/: DECISIONS.md  DESIGN.md
docs/images/: README.md
fixtures/incidents/: INC-1001.json  INC-1002.json  INC-1003.json  INC-1004.json  INC-1005.json  INC-1006.json
fixtures/logs/: INC-1001.json  INC-1002.json  INC-1003.json  INC-1004.json  INC-1005.json  INC-1006.json
fixtures/traces/: INC-1001.json  INC-1002.json  INC-1003.json  INC-1004.json  INC-1005.json  INC-1006.json
src/datadog_triage_agent/: agent.py  config.py  console.py  demo.py  models.py  prompts.py
src/datadog_triage_agent/evals/: __main__.py  harness.py  judge.py  rubric.py
src/datadog_triage_agent/llm/: __init__.py  anthropic_sdk.py  base.py  claude_cli.py
src/datadog_triage_agent/mcp_backends/: __init__.py  client.py  datadog.py
src/datadog_triage_agent/mock_server/: __main__.py  server.py
tests/: test_agent_loop.py  test_anthropic_sdk.py  test_evals.py  test_fixtures.py  test_mock_backend.py  test_smoke.py  test_tool_parsing.py  test_trace.py
