[project]
name = "datadog-triage-agent"
version = "0.1.0"
description = "Hand-rolled incident-triage agent over MCP tools, with an LLM-as-judge eval harness."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "pydantic>=2",
    "python-dotenv>=1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datadog_triage_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
